# ecommerce-api-django

./: LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt
accounts/: forms.py  models.py
apps/cart/: models.py  permissions.py  services.py
apps/orders/: models.py
apps/orders/migrations/: 0001_initial.py  0002_initial.py
apps/payments/: models.py
apps/payments/migrations/: 0001_initial.py
apps/products/: models.py  storage.py
apps/products/migrations/: 0001_initial.py  0002_initial.py
apps/products/tests/: test_permissions.py
apps/reviews/: constants.py  models.py  serializers.py
apps/reviews/migrations/: 0001_initial.py  0002_initial.py
apps/sellers/: models.py  storage.py
apps/sellers/migrations/: 0001_initial.py  0002_initial.py
apps/users/: forms.py  models.py  serializers.py  services.py  storage.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_remove_user_username.py
core/: asgi.py  models.py  settings.py  urls.py  wsgi.py
ecommerce/: settings.py
orders/: models.py
products/: models.py
templates/accounts/: login.html  singup.html
