[project]
name = "ecommerce-django"
version = "0.1.0"
description = "This is a project under development for an e-commerce website built with Django."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.8",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-nested-routers>=0.95.0",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
]
